log
Fri 25 Aug 2023 07:41:55 PM UTC: 
 tests:  0|6
total_score: 0/70
989907c
Sat 26 Aug 2023 12:36:37 AM UTC: 
 list.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: unknown type name ‘list’; did you mean ‘List’?
   33 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |   ^~~~
      |   List
list.c:33:20: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   33 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |                    ^
list.c:38:13: error: request for member ‘head’ in something not a structure or union
   38 |   nuevaLista->head=NULL;
      |             ^~
list.c:39:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   39 |   return nuevaLista;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f9cd910
Sat 26 Aug 2023 12:41:53 AM UTC: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |   ^~~~
      |   List
list.c:32:20: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |                    ^
list.c:37:13: error: request for member ‘head’ in something not a structure or union
   37 |   nuevaLista->head=NULL;
      |             ^~
list.c:38:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   38 |   return nuevaLista;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c753140
Sat 26 Aug 2023 01:26:52 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |   ^~~~
      |   List
list.c:32:20: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |                    ^
list.c:37:13: error: request for member ‘head’ in something not a structure or union
   37 |   nuevaLista->head=NULL;
      |             ^~
list.c:38:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   38 |   return nuevaLista;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
81a2d07
Sat 26 Aug 2023 01:54:52 AM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |   ^~~~
      |   List
list.c:32:20: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |                    ^
list.c:37:17: error: request for member ‘head’ in something not a structure or union
   37 |       nuevaLista->head=NULL;
      |                 ^~
list.c:38:17: error: request for member ‘tail’ in something not a structure or union
   38 |       nuevaLista->tail=NULL;
      |                 ^~
list.c:39:17: error: request for member ‘current’ in something not a structure or union
   39 |       nuevaLista->current=NULL;
      |                 ^~
list.c:41:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   41 |   return nuevaLista;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ff54394
Sat 26 Aug 2023 01:56:21 AM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |   ^~~~
      |   List
list.c:32:20: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   32 |   list* nuevaLista=(List*)malloc(sizeof(List));
      |                    ^
list.c:34:17: error: request for member ‘head’ in something not a structure or union
   34 |       nuevaLista->head=NULL;
      |                 ^~
list.c:35:17: error: request for member ‘tail’ in something not a structure or union
   35 |       nuevaLista->tail=NULL;
      |                 ^~
list.c:36:17: error: request for member ‘current’ in something not a structure or union
   36 |       nuevaLista->current=NULL;
      |                 ^~
list.c:38:10: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   38 |   return nuevaLista;
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4acd737
Sat 26 Aug 2023 02:00:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e350e39
Sat 26 Aug 2023 02:02:31 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0d7bb47
Sat 26 Aug 2023 02:03:49 AM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  5|4
total_score: 25/70
9badbfd
Sat 26 Aug 2023 02:04:51 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
71b3a91
Sat 26 Aug 2023 02:07:19 AM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
86ec32d
Sat 26 Aug 2023 02:11:06 AM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  10|2
total_score: 45/70
f84d0c7
Sat 26 Aug 2023 02:13:27 AM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
3c62c67
